--- a/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/estiloPaginaAdmonVentas.css
+++ b/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/estiloPaginaAdmonVentas.css
@@ -61,7 +61,7 @@ body{
     color: rgb(6, 63, 121);
 }
 
-.boton{
+.botonnuevaventa{
     display: inline-block;    
     padding: 15px 0 ;
     text-align: center;
@@ -83,4 +83,19 @@ body{
     left: 351px;
     top: 404px;
     z-index: 1;
+    text-align: center;
+    overflow: hidden;
+}
+
+.img{
+    width: 95%;
+    animation: illustrationAnimate ease-in 1s infinite alternate;
+}
+
+@keyframes illustrationAnimate{
+    0%{
+        transform: scale(1);
+    } 100%{
+        transform: scale(1.05);
+    }
 }
