--- a/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/estiloPaginaAdmonVentas.css
+++ b/DESARROLLO SOFTWARE/ADMON VENTAS SPRINT 2/estiloPaginaAdmonVentas.css
@@ -13,6 +13,7 @@ body{
 
 .contenedor{
     position: relative;
+    width: 1366px;
     height:768px;
     display: flex;
     align-items: center;
@@ -61,6 +62,340 @@ body{
     color: rgb(6, 63, 121);
 }
 
+.contenedor-formulario{
+    display: flex;
+    flex-basis: 50%;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    position: absolute;
+    width: 530px;
+    height: 585px;
+    left: 769px;
+    top: 32px;
+    color: black;  
+    z-index: 1;
+}
+
+.ID{
+    position: absolute;
+    width: 530px;
+    height: 85px;
+    left: 769px;
+    top: 32px;    
+    z-index: 1;
+    
+
+/* text title */
+    position: absolute;
+    width: 333px;
+    height: 23.06px;
+    left: 0px;
+    top: 0px;
+    font-family: Nunito Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 29px;
+    display: flex;
+    align-items: center;
+    color: #000000;
+}
+
+.sub{
+
+    /* Text Box*/
+       position: absolute;
+       width: 530px;
+       height: 50px;
+       left: 0px;
+       top: 0px;
+       background: #FFFFFF;
+       border: 2px solid #746B6B;
+       box-sizing: border-box;
+       border-radius: 10px; 
+       z-index: 1;  
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 0px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5); 
+        z-index: 1;          
+    }
+
+    .valortotal{
+        position: absolute;
+        width: 530px;
+        height: 85px;
+        left: 769px;
+        top: 157px;
+        z-index: 1;
+    
+    /* text title */
+        position: absolute;
+        width: 333px;
+        height: 23.06px;
+        left: 0px;
+        top: 80px;
+        font-family: Nunito Sans;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        display: flex;
+        align-items: center;
+        color: #000000;
+    }
+    
+    .sub1{
+        
+    /* Text Box*/
+        position: absolute;
+        width: 530px;
+        height: 50px;
+        left: 0px;
+        top: 80px;
+        background: #FFFFFF;
+        border: 2px solid #746B6B;
+        box-sizing: border-box;
+        border-radius: 10px; 
+        z-index: 1;    
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 80px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5); 
+        z-index: 1;          
+    }
+
+    .descripcion{
+        position: absolute;
+        width: 530px;
+        height: 85px;
+        left: 769px;
+        top: 157px;
+        z-index: 1;
+    
+    /* text title */
+        position: absolute;
+        width: 333px;
+        height: 23.06px;
+        left: 0px;
+        top: 160px;
+        font-family: Nunito Sans;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        display: flex;
+        align-items: center;
+        color: #000000;
+    }
+    
+    .sub2{
+        
+    /* Text Box*/
+        position: absolute;
+        width: 530px;
+        height: 50px;
+        left: 0px;
+        top: 160px;
+        background: #FFFFFF;
+        border: 2px solid #746B6B;
+        box-sizing: border-box;
+        border-radius: 10px; 
+        z-index: 1;    
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 160px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5);  
+        z-index: 1;          
+    }
+
+    .fechainicial{
+        position: absolute;
+        width: 530px;
+        height: 85px;
+        left: 769px;
+        top: 157px;
+        z-index: 1;
+    
+    /* text title */
+        position: absolute;
+        width: 333px;
+        height: 23.06px;
+        left: 0px;
+        top: 240px;
+        font-family: Nunito Sans;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        display: flex;
+        align-items: center;
+        color: #000000;
+    }
+    
+    .sub3{
+        
+    /* Text Box*/
+        position: absolute;
+        width: 530px;
+        height: 50px;
+        left: 0px;
+        top: 240px;
+        background: #FFFFFF;
+        border: 2px solid #746B6B;
+        box-sizing: border-box;
+        border-radius: 10px; 
+        z-index: 1;    
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 240px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5); 
+        z-index: 1;          
+    }
+
+    .fechafutura{
+        position: absolute;
+        width: 530px;
+        height: 85px;
+        left: 769px;
+        top: 157px;
+        z-index: 1;
+    
+    /* text title */
+        position: absolute;
+        width: 333px;
+        height: 23.06px;
+        left: 0px;
+        top: 320px;
+        font-family: Nunito Sans;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        display: flex;
+        align-items: center;
+        color: #000000;
+    }
+    
+    .sub4{
+        
+    /* Text Box*/
+        position: absolute;
+        width: 530px;
+        height: 50px;
+        left: 0px;
+        top: 320px;
+        background: #FFFFFF;
+        border: 2px solid #746B6B;
+        box-sizing: border-box;
+        border-radius: 10px; 
+        z-index: 1;    
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 320px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5);  
+        z-index: 1;          
+    }
+
+    .encargado{
+        position: absolute;
+        width: 530px;
+        height: 85px;
+        left: 769px;
+        top: 157px;
+        z-index: 1;
+    
+    /* text title */
+        position: absolute;
+        width: 333px;
+        height: 23.06px;
+        left: 0px;
+        top: 400px;
+        font-family: Nunito Sans;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 29px;
+        display: flex;
+        align-items: center;
+        color: #000000;
+    }
+    
+    .sub5{
+        
+    /* Text Box*/
+        position: absolute;
+        width: 530px;
+        height: 50px;
+        left: 0px;
+        top: 400px;
+        background: #FFFFFF;
+        border: 2px solid #746B6B;
+        box-sizing: border-box;
+        border-radius: 10px; 
+        z-index: 1;    
+    
+    /* Text Box guide*/
+        font-size: 20px;
+        font-weight: 500;
+        position: absolute;
+        width: 500px;
+        height: 30px;
+        left: 0px;
+        top: 400px;
+        line-height: 30px;
+        text-align: left;
+        margin: 30px 0 ;
+        color: rgba(75, 69, 69, 0.5);  
+        z-index: 1;          
+    }
+
 .botonnuevaventa{
     display: inline-block;    
     padding: 15px 0 ;
@@ -69,10 +404,10 @@ body{
     border-radius: 6px;
     text-decoration: none;
     position: absolute;
-    width: 228px;
-    height: 58px;
-    left: 941px;
-    top: 674px;
+    width: 307px;
+    height: 52px;
+    left: 100px;
+    top: 550px;
 }
 
 .contenedor-imagen{
